--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -1,1 +1,32 @@
-<h1>Test: {{ping.versionId}}</h1>
+<form name="fontForm">
+	<div class="form-group">
+	 <label for="name">Font Family</label>
+	   <select required id="name" class="form-control" ng-model="fontArray.name">
+	   		<option value="">---Please select---</option>
+	   		<option ng-repeat="fontFamily in fontFamilies" value="{{fontFamily.name}}">{{fontFamily.name}}</option>
+	   </select>
+	</div>
+	<div class="form-group">
+	  <label for="style">Style</label>
+	   <select required id="style" class="form-control" 
+	   	ng-model="fontArray.style" 
+	   	ng-options="id as style.name for (id, style) in styles">
+
+	   </select>
+	 <div/>
+	 <div class="form-group">
+	   <label for="size">Size</label>
+	   <input required id="size" class="form-control" type="text" ng-model="fontArray.size" value="16"/>
+	</div>
+
+	 <button ng-enabled="" type="submit" class="btn btn-primary" ng-click="getFontArray()">Create</button>
+	 <div class="form-group" ng-show="fontArray.fontArray">
+	 	 <label for="result">C Font File</label>
+		 <textarea id="result" class="form-control" rows="80" cols="80">
+		 	{{fontArray.fontArray}}
+		 </textarea>
+	 </div>
+ </form>
+
+
+ 
