--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -18,7 +18,7 @@
 	   <label for="size">Size</label>
 	   <input required id="size" class="form-control" type="text" ng-model="fontArray.size" value="16"/>
 	</div>
-
+	<img src="/rest/fontPreview/{{fontArray.name}}/{{fontArray.style}}/{{fontArray.size}}"/>
 	 <button ng-enabled="" type="submit" class="btn btn-primary" ng-click="getFontArray()">Create</button>
 	 <div class="form-group" ng-show="fontArray.fontArray">
 	 	 <label for="result">C Font File</label>
