--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -1,4 +1,8 @@
-<form name="fontForm">
+<div class="starter-template">
+  <h1>Font Converter</h1>
+  <p class="lead">Select the font family and other settings to generate a new font file</p>
+</div>
+<div name="fontForm">
 	<div class="form-group">
 	 <label for="name">Font Family</label>
 	   <select required id="name" class="form-control" ng-model="fontArray.name">
@@ -21,14 +25,29 @@
 	<div class="form-group">
 	 	<button ng-enabled="" type="submit" class="btn btn-primary" ng-click="getFontArray()">Create</button>
 	</div>
-	<img src="/rest/fontPreview/{{fontArray.name}}/{{fontArray.style}}/{{fontArray.size}}"/>
+	<div class="form-group" ng-show="fontArray.fontArray">
+		Do you like this font generator? If you do consider <b>spending me a beer</b> for my hardwork or use this link for your next
+		hardware order at <a href="https://www.banggood.com/?p=6R31122484684201508S">Banggood</a>:
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="2QM7Z8HL7CUK6">
+			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+		</form>
+		Scroll down to see the created header file content...
+		
+	</div>
+	<div class="form-group">
+		<img src="/rest/fontPreview/{{fontArray.name}}/{{fontArray.style}}/{{fontArray.size}}"/>
+	</div>
 	 <div class="form-group" ng-show="fontArray.fontArray">
 	 	 <label for="result">C Font File</label>
+	 	 <div>Copy this text into you font header file (e.g. font.h) in the Arduino IDE</div>
 		 <textarea id="result" class="form-control" rows="80" cols="80">
 		 	{{fontArray.fontArray}}
 		 </textarea>
 	 </div>
- </form>
+ </div>
 
 
  
