--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -53,6 +53,7 @@
 				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 				<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 			</form>
+			Go to <a href="http://blog.squix.ch" target="_blank">my blog</a> to find more of my projects...
 			Scroll down to see the created header file content...
 	
 		</div>
