--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -35,7 +35,24 @@
 		   </select>
 		</div>
 		<div class="form-group">
-		 	<button ng-enabled="" type="submit" class="btn btn-primary" ng-click="getFontArray()">Create</button>
+			<div class="row">
+			 	<button ng-enabled="" type="submit" class="col-md-2 btn btn-primary" ng-click="getFontArray()">Create</button>
+				<form class="col-md-4" action="http://www.banggood.com/0_96-Inch-4Pin-White-IIC-I2C-OLED-Display-Module-12864-LED-For-Arduino-p-958196.html?p=6R31122484684201508S" method="GET" target="_blank">
+					<button class="btn btn-success" type="submit">
+						Buy Display (Affiliate)
+					</button>
+				</form>
+			 	<form class="col-md-2" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+					<input type="hidden" name="cmd" value="_s-xclick"/>
+					<input type="hidden" name="hosted_button_id" value="2QM7Z8HL7CUK6"/>
+					<button type="submit" class="btn btn-danger">
+						<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+						Teleport a Beer!
+					</button>
+					<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+				</form>
+
+			</div>
 		</div>
 	  </div>
       <div class="col-md-6 form-group">
@@ -47,12 +64,6 @@
 		<div class="form-group" ng-show="fontArray.fontArray">
 			Do you like this font generator? If you do consider <b>spending me a beer</b> for my hardwork or use this link for your next
 			hardware order at <a href="https://www.banggood.com/?p=6R31122484684201508S">Banggood</a>:
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-				<input type="hidden" name="cmd" value="_s-xclick">
-				<input type="hidden" name="hosted_button_id" value="2QM7Z8HL7CUK6">
-				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-				<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-			</form>
 			Go to <a href="http://blog.squix.ch" target="_blank">my blog</a> to find more of my projects...
 			Scroll down to see the created header file content...
 	
