Added Adafruit GFX font creator

--- a/src/main/webapp/partials/main.html
+++ b/src/main/webapp/partials/main.html
@@ -32,6 +32,7 @@
 		   <select required id="libVersion" class="form-control" ng-model="fontArray.libVersion">
 		   		<option value="2">&lt;3.0.0</option>
 		   		<option value="3">&gt;=3.0.0</option>
+		   		<option value="gfx">Adafruit GFX Font</option>
 		   </select>
 		</div>
 		<div class="form-group">
